# a2d2_utils

./: a2d2_voc.py  get_bbox_classes.py  pyproject.toml  sem2bbox.py  train_test_split.py
